# praxis

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  SHIELD.md  conftest.py  praxis-constitution.md  pyproject.toml
.github/workflows/: ci.yml
docs/: language-reference.md  launch-posts.md
examples/: data_pipeline.px  flight_monitor.px  swarm_analysis.px  weekly_summary.px
examples/rag/: agentic_query.px  index.px  query.px
examples/security/: compliance-evidence.px  cve-enrich.px  ir-data-breach.px  ir-phishing.px  ir-ransomware.px  ir-triage.px  threat-hunt.px  vulnerability-triage.px
praxis/: __init__.py  agent_registry.py  ast_types.py  bridge.py  chat.py  cli.py  constitution.py  distributed.py  embeddings.py  evolver.py  executor.py  grammar.py  improver.py  mcp_server.py  memory.py  optimizer.py  planner.py  providers.py  registry.py  rewriter.py  sandbox.py  scheduler.py  security.py  server.py  validator.py
praxis-vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
praxis-vscode/src/: extension.ts
praxis-vscode/syntaxes/: praxis.tmLanguage.json
praxis/agent/: .env.example  Dockerfile  __init__.py  context.py  core.py  docker-compose.yml  router.py  runner.py  tools.py
praxis/agent/channels/: __init__.py  base.py  telegram.py
praxis/codegen/: typescript.py  wasm.py
praxis/handlers/: __init__.py  agents.py  ai_ml.py  audit.py  control.py  data.py  deploy.py  error.py  io.py
registry/: index.json
scripts/: setup-vps.sh
tests/: test_bridge.py  test_constitution.py  test_executor.py  test_gen_eval.py  test_memory.py  test_parser.py  test_planner.py  test_rag.py  test_security.py  test_server.py  test_sprint10.py  test_sprint11.py  test_sprint12.py  test_sprint13.py  test_sprint14.py  test_sprint15.py  test_sprint16.py  test_sprint17.py  test_sprint18.py  test_sprint20.py  test_sprint21.py  test_sprint24.py  test_sprint25.py  test_sprint27.py  test_sprint29_30.py  test_sprint31.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py  test_sprint_d.py  test_sprint_f.py  test_sprint_g.py  test_validator.py
