[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praxis-lang"
version = "1.3.0"
description = "Praxis — an AI-native intermediate language and runtime for agentic workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Praxis Contributors" },
]
keywords = [
    "ai",
    "agents",
    "workflow",
    "language",
    "dsl",
    "llm",
    "agentic",
    "orchestration",
    "praxis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core — parse, validate, run, FETCH/POST/STORE/RECALL/ASSERT/SNAP
dependencies = [
    "lark>=1.2.2",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
# AI planning — Anthropic Claude (other providers use httpx which is already a core dep)
ai = [
    "anthropic>=0.40.0",
]
# Semantic program memory (downloads PyTorch ~700 MB on first use)
memory = [
    "sentence-transformers>=3.0.0",
]
# FastAPI REST bridge
bridge = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]
# Praxis Agent — Anthropic SDK tool-use loop + Telegram channel (urllib, no new deps)
agent = [
    "anthropic>=0.40.0",
]
# MCP server — expose Praxis as a Model Context Protocol server
mcp = [
    "mcp>=1.0.0",
]
# RAG — document ingestion + embeddings (sentence-transformers for local provider)
rag = [
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0.0",
]
# RAG with Voyage AI embeddings
rag-voyage = [
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0.0",
    "voyageai>=0.2",
]
# RAG with OpenAI embeddings
rag-openai = [
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0.0",
    "openai>=1.0",
]
# Everything
all = [
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pdfplumber>=0.11",
]
# Development
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
praxis = "praxis.cli:main"

[project.urls]
Homepage = "https://github.com/cssmith615/praxis"
Repository = "https://github.com/cssmith615/praxis"
"Bug Tracker" = "https://github.com/cssmith615/praxis/issues"
Changelog = "https://github.com/cssmith615/praxis/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["praxis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["praxis", ".git", "*.egg-info", "dist", "build"]
